# FlexiAIAgent

./: LICENSE  README.md  demo.py  pyproject.toml  settings.py
agents/: agent.py  agent_response.py  message.py  prompt.py
llms/: base.py  ollama.py
tools/: __init__.py  base.py  caculator.py  time.py  web_search.py
