[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.18",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.9.9",
]
